// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/LinkGroup Defaults smoke-test 1`] = `
<div data-test-block="true">
  <ul class="_linkGroup_w23nb_1   ">
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Er du pendler?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du mye?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du dagen lang?
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tester/LinkGroup VariantAnchors smoke-test 1`] = `
<div data-test-block="true">
  <ul class="_linkGroup_w23nb_1   ">
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_down_w23nb_29 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Er du pendler?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_down_w23nb_29 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du mye?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_down_w23nb_29 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du dagen lang?
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tester/LinkGroup WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ul id="htmlId"
      class="_linkGroup_w23nb_1  dummyClassname "
      lang="nb"
      data-testid="123ID"
  >
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Er du pendler?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du mye?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du dagen lang?
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tester/LinkGroup WithColor smoke-test 1`] = `
<div data-test-block="true">
  <ul class="_linkGroup_w23nb_1   ">
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 _icon_white_w23nb_23"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1 _link_white_z7jba_1 "
         href="#storybook-root"
      >
        Er du pendler?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 _icon_white_w23nb_23"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1 _link_white_z7jba_1 "
         href="#storybook-root"
      >
        Pendler du mye?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 _icon_white_w23nb_23"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1 _link_white_z7jba_1 "
         href="#storybook-root"
      >
        Pendler du dagen lang?
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tester/LinkGroup WithLongTextAndIcons smoke-test 1`] = `
<div data-test-block="true">
  <ul class="_linkGroup_w23nb_1   ">
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Denne lenken har en veldig lang tekst. Så lang at den lange teksten tvinger fram linjeskift med tekst som alltid er venstrejustert uansett om ikon eller ikke og får et hengende innrykk.
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_z7jba_35 _icon_isExternal_z7jba_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-label="Til et annet nettsted"
             aria-hidden="false"
             role="img"
        >
          <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
          </path>
        </svg>
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_z7jba_35 _icon_isCustom_z7jba_41"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
        Denne lenken har en veldig lang tekst. Så lang at den lange teksten tvinger fram linjeskift med tekst som alltid er venstrejustert uansett om ikon eller ikke og får et hengende innrykk.
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tester/LinkGroup WithRef play-test 1`] = `
<div data-test-block="true">
  <ul class="_linkGroup_w23nb_1   "
      id="dummyIdForwardedFromRef"
  >
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Er du pendler?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du mye?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du dagen lang?
      </a>
    </li>
  </ul>
</div>
`;

exports[`Tester/LinkGroup WithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <ul class="_linkGroup_w23nb_1 _linkGroup_hasSpacing_w23nb_5  ">
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Er du pendler?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du mye?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du dagen lang?
      </a>
    </li>
  </ul>
  <ul class="_linkGroup_w23nb_1 _linkGroup_hasSpacing_w23nb_5  ">
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Er du pendler?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du mye?
      </a>
    </li>
    <li class="_linkGroupItem_w23nb_8">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M14.14 20.5L21 12.5L14.14 4.5L12.2 6.17L16.55 11.25L3 11.25V13.75L16.55 13.75L12.2 18.83L14.14 20.5Z">
        </path>
      </svg>
      <a class="_link_z7jba_1  "
         href="#storybook-root"
      >
        Pendler du dagen lang?
      </a>
    </li>
  </ul>
</div>
`;
